--- a/public/maze/index.html
+++ b/public/maze/index.html
@@ -6,9 +6,9 @@
     <h2>A-maze game!</h2>
     <div>
         <div>
-            <input type="number" id="learning-rate-input" placeholder="Alpha"/>
-            <input type="number" id="discount-factor-input" placeholder="Gamma"/>
-            <input type="number" id="exploration-rate-input" placeholder="Epsilon"/>
+            <input type="number" id="learning-rate-input" placeholder="Learning rate" title="Alpha"/>
+            <input type="number" id="discount-factor-input" placeholder="Discount Factor" title="Gamma"/>
+            <input type="number" id="exploration-rate-input" placeholder="Exploration Rate" title="Epsilon"/>
         </div>
         <div>
             <input type="number" id="max-steps-input" placeholder="Steps"/>
@@ -21,7 +21,23 @@
         <div>Total Reward: <span class="game-reward" id="total-reward">0</span></div>
         <div>Next Action: <span class="game-action" id="next-action">UNKNOWN</span></div>
     </div>
-    <div class="game-board" id="game-values"></div>
+    <div class="game-values" id="game-values" title="Click to hide!">
+        <div class="game-board-row">
+            <div class="game-value"></div>
+            <div class="game-value" id="action-left-value" title="Left"></div>
+            <div class="game-value"></div>
+        </div>
+        <div class="game-board-row">
+            <div class="game-value" id="action-up-value" title="Up"></div>
+            <div class="game-value"></div>
+            <div class="game-value" id="action-down-value" title="Down"></div>
+        </div>
+        <div class="game-board-row">
+            <div class="game-value"></div>
+            <div class="game-value" id="action-right-value" title="Right"></div>
+            <div class="game-value"></div>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
     <script src="/maze/script.js"></script>
 </body>
