clean more shits

--- a/public/maze/index.html
+++ b/public/maze/index.html
@@ -22,6 +22,9 @@
             <input type="number" id="max-steps-input" placeholder="Steps" title="Maximum Steps"/>
             <input type="number" id="step-speed-input" placeholder="Speed" title="In Millisecond"/>
         </div>
+        <div>
+            <input type="text" id="init-state-input" placeholder="Initial State" title="x, y"/>
+        </div>
         <button id="start-button">Start</button>
     </div>
     <div class="container">
