--- a/public/maze/index.html
+++ b/public/maze/index.html
@@ -22,17 +22,17 @@
     </div>
     <div class="container">
         <div>
-            <input type="number" id="learning-rate-input" placeholder="Learning Rate" title="Alpha [Default: 0.5]" min="0" max="1"/>
-            <input type="number" id="discount-factor-input" placeholder="Discount Factor" title="Gamma [Default: 0.7]" min="0" max="1"/>
-            <input type="number" id="exploration-rate-input" placeholder="Exploration Rate" title="Epsilon [Default: 0.1]" min="0" max="1"/>
+            <input type="number" id="learning-rate-input" placeholder="Learning Rate" title="Alpha [Default: 0.5]" min="0" max="1" step="0.0001"/>
+            <input type="number" id="discount-factor-input" placeholder="Discount Factor" title="Gamma [Default: 0.7]" min="0" max="1" step="0.0001"/>
+            <input type="number" id="exploration-rate-input" placeholder="Exploration Rate" title="Epsilon [Default: 0.1]" min="0" max="1" step="0.0001"/>
         </div>
         <div>
             <input type="number" id="max-steps-input" placeholder="Steps" title="Maximum Steps [Default: 200]" min="0"/>
             <input type="number" id="step-speed-input" placeholder="Speed" title="Speed (in millisecond) [Default: 1000]" min="10"/>
         </div>
         <div>
-            <input type="text" id="init-state-input" placeholder="Initial State" title="Initial State: x, y [Default: Random]"/>
-            <select id="game-policies" title="Policy [Default: Q-learning]">Policy</select>
+            <input type="text" id="init-state-input" placeholder="Initial State" title="Initial State: x, y [Default: Random]" pattern="[0-9]+[,|\s][0-9]+"/>
+            <select id="game-policies" title="Policy">Policy</select>
         </div>
         <div>
             <button id="start-button">Start</button>
